2005-08-23  Paul J Stevens <paul@nfg.nl>

	* imaputil.c:
	set search_cost for IST_HDR
	* debug.c:
	make string buffer in trace a static one
	* pool.c:
	make locking code non-blocking to avoid deadlocks
	* server.c:
	sleep and exit in case of segfaults
	* dm_search.c:
	fix prototype for db_search
	* test-scripts/testimap.py:
	add non-forking support to test-script
	* check_dbmail_imapd.c, dbmsgbuf.c, rfcmsg.c, rfcmsg.h:
	start cleaning out the old mime-parser from the retrieval chain
	* ChangeLog, pop3.c:
	resync git-tree

2005-08-23  Ilja Booij <ilja@ic-s.nl>

	* pop3.c: AUTH command no longer returns list of supported 
	authentication mechanisms when issued without arguments. closes #237
	 
2005-08-17  Aaron Stone <aaron@serendipity.cx>

	* dsn.c: Missing comma in the class status
	codes. (closes #248).

2005-08-17  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog, debian/rules:
	update python
	* python/bin/inserter.py, python/lib/__init__.pyc, python/lib/dbmail.pyc:
	cleanup python
	* pool.c:
	make getKey failure non-fatal in scoreboard_release
	* Makefile.am, dbmail-imapsession.c, dbsearch.c, dbsearch.h, dm_search.c, 
	  dm_search.h, imaputil.c:
	rename dbsearch.[ch] to dm_search.[ch]
	* dm_search.c, dm_search.h, imaputil.c, tags, test-scripts/testimap.py:
	do imap header searches using the new header tables

2005-08-12  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, python/bin/autoreplier.py, python/bin/inserter.py, 
	  python/lib/__init__.py, python/lib/__init__.pyc, 
	  python/lib/dbmail.py, python/lib/dbmail.pyc:
	initial python libs and scripts

2005-08-11  Paul J Stevens <paul@nfg.nl>

	* ChangeLog, debian/changelog:
	debian snapshot release
	* dbmail-message.c:
	fix leaking file-descriptors (closes: #243)

2005-08-10  Paul J Stevens <paul@nfg.nl>

	* imapd.c, pop3d.c:
	added missing SOCKET config-item
	* check_dbmail_deliver.c, misc.c, misc.h:
	preliminary code for folder patch
	* debian/dbmail.init:
	init script update
	* db.c: