@@ -2336,3 +2336,280 @@ u64_t get_dumpsize(body_fetch_t *bodyfetch, u64_t dumpsize)
 	return (u64_t)cnt;
 }
 
+/* local defines */
+#define NORMPAR 1
+#define SQUAREPAR 2
+#define NOPAR 0
+
+char *the_args[MAX_ARGS];
+
+/*
+ * build_args_array_ext()
+ *
+ * imap command tokenizer
+ *
+ * builds an dimensional array of strings containing arguments based upon 
+ * strings on cmd line specified by {##}\0
+ * (\r\n had been removed from string)
+ * 
+ * normal/square parentheses have special meaning:
+ * '(body [all header])' will result in the following array:
+ * [0] = '('
+ * [1] = 'body'
+ * [2] = '['
+ * [3] = 'all'
+ * [4] = 'header'
+ * [5] = ']'
+ * [6] = ')'
+ *
+ * quoted strings are those enclosed by double quotation marks and returned as a single argument
+ * WITHOUT the enclosing quotation marks
+ *
+ * parentheses loose their special meaning if inside (double)quotation marks;
+ * data should be 'clarified' (see clarify_data() function below)
+ *
+ * The returned array will be NULL-terminated.
+ * Will return NULL upon errors.
+ */
+char **build_args_array_ext(const char *originalString, clientinfo_t * ci)
+{
+	int nargs = 0, inquote = 0, quotestart = 0;
+	int nnorm = 0, nsquare = 0, paridx = 0, argstart = 0;
+	unsigned int i;
+	char parlist[MAX_LINESIZE];
+	char s[MAX_LINESIZE];
+	char *tmp, *lastchar;
+	int quotedSize, cnt, dataidx;
+
+	/* this is done for the possible extra lines to be read from the client:
+	 * the line is read into currline; s will always point to the line currently
+	 * being processed
+	 */
+	strncpy(s, originalString, MAX_LINESIZE);
+
+	if (!s)
+		return NULL;
+
+	/* check for empty string */
+	if (!(*s)) {
+		the_args[0] = NULL;
+		return the_args;
+	}
+
+	/* find the arguments */
+	paridx = 0;
+	parlist[paridx] = NOPAR;
+
+	inquote = 0;
+
+	for (i = 0, nargs = 0; s[i] && nargs < MAX_ARGS - 1; i++) {
+		/* check quotes */
+		if (s[i] == '"' && ((i > 0 && s[i - 1] != '\\') || i == 0)) {
+			if (inquote) {
+				/* quotation end, treat quoted string as argument */
+				if (! (the_args[nargs] = g_new0(char,(i - quotestart)))) {
+					g_strfreev(the_args);
+					trace(TRACE_ERROR, "%s,%s: out-of-memory error.", __FILE__, __func__);
+					return NULL;
+				}
+
+				memcpy((void *) the_args[nargs], (void *) &s[quotestart + 1], i - quotestart - 1);
+				the_args[nargs][i - quotestart - 1] = '\0';
+
+				nargs++;
+				inquote = 0;
+			} else {
+				inquote = 1;
+				quotestart = i;
+			}
+
+			continue;
+		}
+
+		if (inquote)
+			continue;
+
+		/* check for (, ), [ or ] in string */
+		
+		if (s[i] == '(' || s[i] == ')' || s[i] == '[' || s[i] == ']') {
+			switch (s[i]) {
+			/* check parenthese structure */
+				case ')':
+					
+				if (paridx < 0 || parlist[paridx] != NORMPAR)
+					paridx = -1;
+				else {
+					nnorm--;
+					paridx--;
+				}
+
+				break;
+
+				case ']':
+				
+				if (paridx < 0 || parlist[paridx] != SQUAREPAR)
+					paridx = -1;
+				else {
+					paridx--;
+					nsquare--;
+				}
+
+				break;
+
+				case '(':
+				
+				parlist[++paridx] = NORMPAR;
+				nnorm++;
+				
+				break;
+
+				case '[':
+				
+				parlist[++paridx] = SQUAREPAR;
+				nsquare++;
+
+				break;
+			}
+
+			if (paridx < 0) {
+				/* error in parenthesis structure */
+				g_strfreev(the_args);
+				return NULL;
+			}
+
+			/* add this parenthesis to the arg list and continue */
+			if (!  (the_args[nargs] = (char *) dm_malloc(sizeof(" ")))) {
+				/* out of mem */
+				g_strfreev(the_args);
+				trace(TRACE_ERROR, "%s,%s: out-of-memory error.", __FILE__, __func__);
+				return NULL;
+			}
+			the_args[nargs][0] = s[i];
+			the_args[nargs][1] = '\0';
+
+			nargs++;
+			continue;
+		}
+
+		if (s[i] == ' ')
+			continue;
+
+		/* check for {number}\0 */
+		if (s[i] == '{') {
+			quotedSize = strtoul(&s[i + 1], &lastchar, 10);
+
+			/* only continue if the number is followed by '}\0' */
+			trace(TRACE_DEBUG, "%s,%s: last char = %c", __FILE__, __func__, *lastchar);
+			if ((*lastchar == '+' && *(lastchar + 1) == '}' && 
+			     *(lastchar + 2) == '\0') || 
+			    (*lastchar == '}' && *(lastchar + 1) == '\0')) {
+				/* allocate space for this argument (could be a message when used with APPEND) */
+				if (! (the_args[nargs] = (char *) dm_malloc(sizeof(char) * (quotedSize + 1)))) {
+					trace(TRACE_ERROR, "%s,%s: out-of-memory allocating [%u] bytes for extra string",
+							__FILE__, __func__, quotedSize + 1);
+					g_strfreev(the_args);
+					return NULL;
+				}
+
+				ci_write(ci->tx, "+ OK gimme that string\r\n");
+				
+				alarm(ci->timeout);	/* dont wait forever */
+				for (cnt = 0, dataidx = 0; cnt < quotedSize; cnt++) {
+					the_args[nargs][dataidx] = fgetc(ci->rx);
+
+					if (the_args[nargs][dataidx] != '\r')
+						dataidx++;	/* only store if it is not \r */
+				}
+
+				alarm(0);
+				the_args[nargs][dataidx] = '\0';	/* terminate string */
+				nargs++;
+
+				if (!ci->rx || !ci->tx || ferror(ci->rx) || ferror(ci->tx)) {
+					trace(TRACE_ERROR, "%s,%s: timeout occurred", 
+							__FILE__, __func__);
+					g_strfreev(the_args);
+					return NULL;
+				}
+
+				/* now read the rest of this line */
+				alarm(ci->timeout);
+				fgets(s, MAX_LINESIZE, ci->rx);
+				alarm(0);
+
+				if (!ci->rx || !ci->tx || ferror(ci->rx) || ferror(ci->tx)) {
+					trace(TRACE_ERROR, "%s,%s: timeout occurred", 
+							__FILE__, __func__);
+					g_strfreev(the_args);
+					return NULL;
+				}
+
+				/* remove trailing \r\n */
+				tmp = &s[strlen(s)];
+				tmp--;	/* go before trailing \0; watch this with empty strings! */
+				while (tmp >= s && (*tmp == '\r' || *tmp == '\n')) {
+					*tmp = '\0';
+					tmp--;
+				}
+
+				trace(TRACE_DEBUG, "%s,%s: got extra line [%s]", 
+						__FILE__, __func__, s);
+
+				/* start over! */
+				i = 0;
+				continue;
+			}
+		}
+
+		/* at an argument start now, walk on until next delimiter
+		 * and save argument 
+		 */
+
+		for (argstart = i; i < strlen(s) && !strchr(" []()", s[i]); i++)
+			if (s[i] == '"') {
+				if (s[i - 1] == '\\')
+					continue;
+				else
+					break;
+			}
+
+		if (!  (the_args[nargs] = g_new0(char,(i - argstart + 1)))) {
+			g_strfreev(the_args);
+
+			trace(TRACE_ERROR,
+			      "IMAPD: Not enough memory while building up argument array.");
+			return NULL;
+		}
+
+		memcpy((void *) the_args[nargs], (void *) &s[argstart], i - argstart);
+		the_args[nargs][i - argstart] = '\0';
+
+		nargs++;
+		i--;		/* walked one too far */
+	}
+
+	if (paridx != 0) {
+		/* error in parenthesis structure */
+		while (--nargs >= 0) {
+			dm_free(the_args[nargs]);
+			the_args[nargs] = NULL;
+		}
+		return NULL;
+	}
+
+	the_args[nargs] = NULL;	/* terminate */
+
+	/* dump args (debug) */
+	for (i = 0; the_args[i]; i++) {
+		trace(TRACE_DEBUG, "arg[%d]: '%s'\n", i, the_args[i]);
+	}
+
+	return the_args;
+}
+
+#undef NOPAR
+#undef NORMPAR
+#undef RIGHTPAR
+
+
+
